Closed Bug 1665300 Opened 4 years ago Closed 4 years ago

GLContext::fGetGraphicsResetStatus() does not work on android emulator

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

Details

Attachments

(1 file)

When I run the following WebGL animation sample on Android emulator locally, WebGL contest was lost soon with glGetGraphicsResetStatus error(0xf6f52ba6)

0xf6f52ba6 seems like an invalid error value. It seems that glGetGraphicsResetStatus does not work.

[STR]
-[1] build mozilla-central locally for emulator(ac_add_options --target=x86_64) on Ubuntu 18.04
-[2] ./mach run
-[3] "adb shell logcat" in a different terminal for taking logcat log.
-[4] move to https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Animating_objects_with_WebGL

Assignee: nobody → sotaro.ikeda.g
Component: Graphics → Canvas: WebGL

The problem of fGetGraphicsResetStatus() exists on Android 7.0/8.0/10.0 emulator both with SwiftShader and with GPU.

Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/943f0ec31438
Disable glGetGraphicsResetStatus usage on android emulator r=jgilbert
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: