Bug 1665300 - Disable glGetGraphicsResetStatus usage on android emulator r=jgilbert

glGetGraphicsResetStatus does not work on android emulator both with SwiftShader and with GPU.

Differential Revision: https://phabricator.services.mozilla.com/D90391